# NeaLang

./: .gitignore  CODESTYLE.md  Cargo.toml  README.md  a.out  b.out  callgrind.out.14388  helloworld.nl  indent.py  loc.py  test  test.c  tests_build.sh  tests_run.sh
arm64/: Cargo.toml
arm64/examples/: arm64_tiny.rs  tiny
arm64/src/: ctx.rs  ins.rs  lib.rs  reloc.rs
ir/examples/: ir_control_flow.rs  ir_do_some_math.rs  math_ir.rs  mathir.rs
ir/src/: display.rs  eval.rs  global.rs  ins.rs  lib.rs  types.rs  unit.rs  validate.rs
ir2arm64/: Cargo.toml
ir2arm64/src/: ins.rs  lib.rs  registerify.rs  unit.rs  util.rs
ir2java/: Cargo.toml
ir2java/src/: globals.rs  ins.rs  lib.rs  unit.rs  util.rs
ir2triple/: Cargo.toml
ir2triple/examples/: binary.elf  call_ir2triple.rs  entry.c  global_ir2triple.rs
ir2triple/src/: java.rs  lib.rs  linux_elf.rs  linux_elf_x86.rs  macos_macho.rs  macos_macho_arm64.rs  macos_macho_x86.rs  wasm.rs
ir2wasm/: Cargo.toml
ir2wasm/examples/: binary.wasm  math_ir2wasm.rs
ir2wasm/src/: ins.rs  lib.rs  unit.rs  util.rs
ir2wasm/tests/: basic.wasm  compounds.wasm  ir2wasm_basic.rs  ir2wasm_locals.rs  ir2wasm_math.rs  locals.wasm  math.wasm  wasm.js
ir2x86/: Cargo.toml  ir2x86.md
ir2x86/examples/: call_ir2x86.rs  conv_ir2x86.rs  ifelse_ir2x86.rs  localrefs_ir2x86.rs  loop_ir2x86.rs  math_ir2x86.rs  mathir2x86.rs  multiple_returns_ir2x86.rs  new_ir2x86.rs  slice_ir2x86.rs  struct_ir2x86.rs
ir2x86/src/: ins.rs  lib.rs  registerify.rs  unit.rs  util.rs
java/: Cargo.toml
nl/: Cargo.toml  syntax.md
ofile/: Cargo.toml
(+106 files in other folders)
