[package]
name = "ir2triple"
version = "0.1.0"
authors = ["154852Ploix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ir = { path = "../ir" }
ofile = { path = "../ofile" }
ir2x86 = { path = "../ir2x86" }
x86 = { path = "../x86" }
ir2wasm = { path = "../ir2wasm" }
java = { path = "../java" }
ir2java = { path = "../ir2java" }
arm64 = { path = "../arm64" }
ir2arm64 = { path = "../ir2arm64" }